--- a/softdevfinals/templates/contact/contact_us.html
+++ b/softdevfinals/templates/contact/contact_us.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Contact Us</title>
-</head>
-<body>
-    <h1>Contact Us</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Send</button>
-    </form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contact Us</title>
+        <link rel="stylesheet" href="{% static 'css/contact_us.css' %}">
+    </head>
+    <body>
+        
+        <div class="container">
+            <div class="d-flex justify-content-between align-items-center mb-4">
+                <a href="{% url 'landing_page' %}" class="btn btn-custom">Return</a>
+            </div>
+            
+            <h1>Contact Us</h1>
+            <form method="POST">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Send</button>
+            </form>
+        </div>
+        <div class="footer">
+            &copy; 2024 Share Mo Lang. All rights reserved.
+        </div>
+    </body>
 </html>
